# FM-Note

./: FM_01_linear.ipynb  FM_02_als.ipynb  pyproject.toml
202402/: FastMultivariateGauss.ipynb  SparseBLR.ipynb  [in Japanese] BOCS.ipynb
202402/.ipynb_checkpoints/: [in Japanese] BOCS-checkpoint.ipynb
202402/BOCS/: Horseshoe.jl
202403/: FM_01_linear.ipynb  FM_02_als.ipynb  FM_03_gibbs.ipynb  FM_04_sparse.ipynb
202403/figures/: FM_03_hierarchical.dio
202403/markdown/: BFM.md
202403/sympy/: BFM.ipynb
202403/tests/: FM_02_als_julia.jl  FM_02_als_python.py  FM_03_gibbs_julia.jl  FM_03_gibbs_julia.py  FM_03_gibbs_python.py
202403/tests_FM/: FM_02_als_julia.py  FM_02_als_python.py  FM_03_gibbs_julia.jl  FM_03_gibbs_julia.py  FM_03_gibbs_python.py
202411/: BendersDecomposition.md
tests/: FM_02_als_julia.jl  FM_02_als_julia.py  FM_02_als_julia_old.jl
