[tool.poetry]
name = "qi4u2024"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
ipykernel = "^6.29.2"
julia = "^0.6.2"
matplotlib = "^3.8.3"
sympy = "^1.12"
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
